--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/node-http-handler": "file:node_modules/@aws-sdk/node-http-handler",
     "ask-sdk-core": "^2.10.2",
     "ask-sdk-model": "^1.35.1",
-    "atob": "^2.1.2"
+    "atob": "^2.1.2",
+    "node-spotify-api": "^1.1.1"
   }
 }
